fixed scrollbar, fixed loading screen

--- a/style2.css
+++ b/style2.css
@@ -1,4 +1,4 @@
-body { font-size:13px;font-family:"Times New Roman", Times, serif;color:white }
+body { font-size:10px;font-family:"Courier New", Courier, monospace;color:white }
 
 #levelshot { z-index:1;position:absolute;width:192px;height:146px;top:4px;left:250px }
 
@@ -6,11 +6,15 @@ body { font-size:13px;font-family:"Times New Roman", Times, serif;color:white }
 
 #header { z-index:3;position:absolute;top:6px;left:12px;width:229px;height:32px;overflow:hidden }
 
-#players { z-index:3;position:absolute;top:44px;left:31px;width:211px;height:150px;margin:0px;padding:0px;list-style:none;border:1px solid;border-color:#333333;overflow:hidden }
+#players { z-index:3;position:absolute;top:46px;left:32px;width:212px;height:148px;margin:0px;padding:0px }
+#scrollable { z-index:3;position:absolute;top:0px;left:0px;margin:0px;padding:0px }
+#scrollable ul { list-style-type:none;padding:0px;margin:0px }
+#scrollable ul li { width:200px }
 
-#loading { z-index:4;width:100px;height:50px;top:50px;left:50px;background:red }
+#loading { z-index:4;position:absolute;top:0px;left:0px;width:450px;height:200px;background:black;opacity:0.9;filter:alpha(opacity=90); }
+#loading img { position:absolute;top:76px;left:150px;width:150px;height:48px }
 
-#map { z-index:3;position:absolute;top:120px;left:254px;background-color:black;opacity:0.8;filter:alpha(opacity=40);padding:4px;font-size:16px }
+#map { z-index:3;position:absolute;top:132px;left:250px;width:192px;font-size:16px;font-weight:bold;text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;text-align: center;overflow:hidden }
 #gametype { z-index:3;position:absolute;top:90px;left:254px;background-color:black;opacity:0.8;filter:alpha(opacity=40);padding:4px;font-size:16px }
 
 #rcon { z-index:3;position:absolute;top:174px;left:254px }
